# md

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/app/components/: FileExplorer.tsx  MarkdownViewer.tsx  ProjectList.tsx  QuickOpen.tsx  TableOfContents.tsx
src/app/components/layout/: ResizablePanels.tsx
src/app/lib/: gitignore.ts  markdown.ts  menu-handler.ts  mermaid-renderer.ts  persistence.ts
src/app/stores/: file-filters.ts  files.ts  projects.ts  theme.ts  zoom.ts
src/styles/: index.css  markdown.css  print.css  tailwind.css  theme.css
